[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/World/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/Enemy1/Enemy1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Death/Death.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Hero/Hero.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/World/light_mask.png" type="Texture" id=5]
[ext_resource path="res://scenes/CharacterOverlay/CharacterOverlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/World/white.png" type="Texture" id=7]
[ext_resource path="res://scenes/World/black.png" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 31.3197, 34.677, 0, 0, 0, 0, 984.942, 37.3978, 0, 0, 0, 0, 989.023, 567.944, 0, 0, 0, 0, 32.6801, 570.664, 0, 0, 0, 0, 31.3197, 34.677 )
}

[node name="World" type="Node"]

script = ExtResource( 1 )
Enemy1 = ExtResource( 2 )
Death = ExtResource( 3 )

[node name="EnemyPath" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="EnemySpawn" type="PathFollow2D" parent="EnemyPath" index="0"]

position = Vector2( 31.3197, 34.677 )
rotation = 0.00285327
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="SpawnTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="hero" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 506.924, 284.291 )

[node name="CanvasModulate" type="CanvasModulate" parent="hero" index="7"]

color = Color( 0, 0, 0, 1 )

[node name="HeroLight" type="Light2D" parent="hero/CanvasModulate" index="0"]

position = Vector2( -0.621858, 0.418052 )
scale = Vector2( 2.74375, 2.68536 )
enabled = true
editor_only = false
texture = ExtResource( 5 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.8
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 9
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Transform" ]

[node name="CharacterOverlay" parent="." index="3" instance=ExtResource( 6 )]

_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="OverlayLight" type="Light2D" parent="CharacterOverlay" index="0"]

position = Vector2( 554.705, 316.554 )
scale = Vector2( 35.669, 19.6939 )
enabled = true
editor_only = false
texture = ExtResource( 7 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = 10
range_z_max = 10
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Transform" ]

[node name="SoundEffectsPlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = null
volume_db = 5.53
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="." index="5"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MainMusic"

[node name="Background" type="Sprite" parent="." index="6"]

scale = Vector2( 1044.97, 624.504 )
z_index = -10
texture = ExtResource( 8 )
_sections_unfolded = [ "Region", "Z Index" ]

[node name="DeathTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 7.0
one_shot = true
autostart = false

[node name="SlowDownTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="hit" from="hero" to="." method="_on_hero_hit"]

[connection signal="hit" from="hero" to="CharacterOverlay" method="_on_hero_hit"]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[connection signal="timeout" from="SlowDownTimer" to="." method="_on_SlowDownTimer_timeout"]


